--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Daniel Reis / Site Title"
+title                    : "Daniel Reis"
 title_separator          : "-"
 name                     : &name "Daniel Reis"
-description              : &description "YDaniel Reis academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Daniel Reis academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://danielhareis.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -24,11 +24,11 @@ repository               : "danielhareis/danielhareis.github.io"
 author:
   # Biographic information
   avatar           : "Foto_profissional.jpg"
-  name             : "Your Sidebar Name"
+  name             : ""
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "PhD in Economics, Consultant in Antitrust "
+  location         : "São Paulo - SP, Brazil"
+  employer         : #Completar depois
   uri              : # URL
   email            : "danielhareis@gmail.com" 
 
@@ -38,10 +38,10 @@ author:
   googlescholar    : "https://scholar.google.com.br/citations?hl=pt-BR&user=hJcZmOUAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0001-6896-7734"
   semantic         : # URL
   ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
@@ -57,7 +57,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/daniel-reis-857064220/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -74,7 +74,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "https://x.com/danielhareis"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
